[project]
name = "loading-programs"
version = "0.1.0"
description = "install packages version"
authors = [
    {name = "samarkar"}
]
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.31.0,<3.0.0)",
    "numpy (>=1.26.2,<2.0.0)",
    "pandas (>=2.1.0,<3.0.0)",
    "matplotlib (>=3.7.2,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
